--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,9 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
+      - run: yarn set version berry
       - run: yarn add -dev eslint
+      - run: yarn add eslint
       - run: echo "Hello World"
       - run: pwd && ls -la
 
